--- a/trunk/emacspeak/info/commands.texi
+++ b/trunk/emacspeak/info/commands.texi
@@ -54,6 +54,7 @@ documentation.
 * emacspeak-redefine::          
 * emacspeak-remote::            
 * emacspeak-rmail::             
+* emacspeak-rss::               
 * emacspeak-solitaire::         
 * emacspeak-sounds::            
 * emacspeak-speak::             
@@ -74,6 +75,7 @@ documentation.
 * emacspeak-widget::            
 * emacspeak-wizards::           
 * emacspeak-xml-shell::         
+* voice-setup::                 
 @end menu
 
 @node dtk-speak
@@ -128,18 +130,6 @@ unresponsive when asked to stop talking.  Splitting on white
 space makes emacspeak's stop command responsive.  However,
 when splitting on white space, the speech sounds choppy
 since the synthesizer is getting a word at a time.
-@end deffn
-
-@deffn tts-restart ()
-@kbd{ control e control s }
-
-Use this to nuke the currently running TTS server and restart it.
-@end deffn
-
-@deffn tts-show-debug-buffer ()
-@kbd{ control e d CONTROL meta b }
-
-Select TTS debugging buffer.
 @end deffn
 
 @node dtk-tcl
@@ -2071,6 +2061,22 @@ Speak labels of current message
 
 @deffn emacspeak-rmail-summarize-current-message ()
 Summarize current message
+@end deffn
+
+@node emacspeak-rss
+@section emacspeak-rss
+
+Automatically generated documentation
+for commands defined in module  emacspeak-rss.
+
+@deffn emacspeak-rss-browse (FEED)
+@kbd{ control e control u }
+
+Browse specified RSS feed.
+@end deffn
+
+@deffn emacspeak-rss-display (RSS-URL &optional SPEAK)
+Retrieve and display RSS news feed.
 @end deffn
 
 @node emacspeak-solitaire
@@ -4437,16 +4443,6 @@ during initialization.
 Automatically generated documentation
 for commands defined in module  nil.
 
-@deffn emacspeak-rss-browse ()
-@kbd{ control e control u }
-
-Browse specified RSS feed.
-@end deffn
-
-@deffn emacspeak-rss-display ()
-Retrieve and display RSS news feed.
-@end deffn
-
 @deffn emacspeak-speak-current-field ()
 @kbd{ control e . }
 
@@ -4459,7 +4455,52 @@ defined  by Emacs 21.
 Perform a google search restricted to the current WWW site.
 @end deffn
 
-@deffn tts-eflite ()
-Use eflite TTS server.
+@node voice-setup
+@section voice-setup
+
+Commentary:
+A voice is to audio as a font is to a visual display.
+A personality is to audio as a face is to a visual display. 
+
+Voice-lock-mode is a minor mode that causes your comments to be 
+spoken in one personality, strings in another, reserved words in another,
+documentation strings in another, and so on.
+
+Comments will be spoken in `voice-lock-comment-personality'.
+Strings will be spoken in `voice-lock-string-personality'.
+Doc strings will be spoken in `voice-lock-doc-string-personality'.
+Function and variable names (in their defining forms) will be
+ spoken in `voice-lock-function-name-personality'.
+Reserved words will be spoken in `voice-lock-keyword-personality'.
+
+To make the text you type be voiceified, use M-x voice-lock-mode.
+When this minor mode is on, the voices of the current line are
+updated with every insertion or deletion.
+
+How faces map to voices:
+TTS engine specific modules e.g., dtk-voices.el and
+outloud-voices.el 
+define a standard set of voice names.
+This module maps standard "personality" names to these pre-defined
+voices.
+It  does this via special form def-voice-font 
+which takes a personality name, a voice name and a face name to
+set up the mapping between face and personality, and personality
+and voice.
+See many instances of this usage in this module.
+This special form is available for use from other emacspeak
+modules.
+
+Special form def-voice-font sets up the personality name to be
+available via custom.
+
+Automatically generated documentation
+for commands defined in module  voice-setup.
+
+@deffn voice-setup-face-to-voice (START END)
+Voiceify faces in specified region that are not already voicefied.
+Face to voice mapping is specified in
+voice-setup-face-voice-table.
+This function forces voice-lock mode on.
 @end deffn
 
