--- a/trunk/emacspeak/info/.spell.tex
+++ b/trunk/emacspeak/info/.spell.tex
@@ -8,7 +8,8 @@ alltheweb
 AllTheWeb
 altavista
 Altavista
-amongst
+amphetadesk
+AmphetaDesk
 api
 API
 appt
@@ -18,6 +19,7 @@ arg
 ARG
 args
 ascii
+ASF
 auctex
 audioplay
 auditorallly
@@ -42,7 +44,13 @@ builtin
 calc
 CalTrain
 cd
+cdda
+cdplay
 cdr
+cdrom
+cdstart
+cdtool
+CDTool
 CHARENT
 Chassell
 cheque
@@ -52,13 +60,13 @@ chown
 cindex
 citeseer
 CiteSeer
+cli
 cnn
 comint
 conf
 config
 contnets
 convertor
-corectly
 cp
 cpan
 CPAN
@@ -85,7 +93,6 @@ defvars
 defvoice
 DEREF
 dev
-dfined
 dfn
 dialogue
 dialogues
@@ -95,7 +102,6 @@ dired
 Dired
 direntry
 DIRNAME
-dividual
 dmacro
 Dmacro
 docbook
@@ -146,6 +152,7 @@ eudc
 EUDC
 europe
 exdent
+exorcized
 faq
 fboundp
 FEFE
@@ -163,7 +170,6 @@ fn
 FNsearch
 foldoc
 FolDoc
-Forw
 freeamp
 FreeAmp
 freshmeat
@@ -204,7 +210,6 @@ iftex
 imcom
 IMCom
 imenu
-Incidently
 Indices
 INITSTR
 insertcopying
@@ -226,8 +231,8 @@ Keybindings
 keymap
 keypress
 kindex
-KlZVoUxwQQBT
 kotl
+KoUxwQ
 KSC
 ky
 labelled
@@ -240,18 +245,15 @@ loaddefs
 loadkeys
 locator
 LOCATOR
-Luanch
 maillog
-maintainance
 makeinfo
-many'to
-mechnaism
 memoize
 Memoizes
 merriam
 metafile
 minibuffer
 Mozilla
+mplayer
 msg
 mspools
 MSPPT
@@ -262,8 +264,6 @@ namespace
 nfl
 noindent
 nonprinting
-notifcation
-obselete
 ocr
 okay
 onclick
@@ -279,7 +279,6 @@ pdf
 PDF
 pdftotext
 perl
-Persnality
 PinYin
 playlist
 PLAYLIST
@@ -291,11 +290,9 @@ ppthtml
 PPTHTML
 pre
 Pre
-preceeded
 Prepend
 prepended
 printindex
-pronounciation
 ps
 psgml
 pxref
@@ -308,7 +305,6 @@ readonly
 realaudio
 Realaudio
 RealAudio
-realaudo
 realplayer
 redhat
 Redhat
@@ -317,12 +313,12 @@ ret
 RET
 rf
 RHP
-rin
 rjc
 rmail
 RMAIL
 ro
 rolodex
+rpmfind
 rss
 RSS
 rw
@@ -335,7 +331,6 @@ screenreaders
 searchable
 Searchable
 sel
-servre
 setenv
 setq
 settitle
@@ -343,6 +338,8 @@ sexp
 sgml
 shoutcast
 Shoutcast
+sigbegone
+sigs
 SiSheng
 smallbook
 smallexample
@@ -375,7 +372,6 @@ supercite
 symlink
 symlinks
 SYMLINKS
-targetted
 tcl
 TCL
 TclX
@@ -406,6 +402,8 @@ UNESCAPE
 UNIBYTE
 unix
 unnumberedsec
+unnumberedsubsubsec
+unpause
 unsets
 upcase
 upto
@@ -434,13 +432,11 @@ voicify
 Voicify
 voicifying
 vskip
-vvariable
 wav
 websearch
 Websearch
 webster
 winring
-workng
 wrolo
 wvText
 xc
